--- a/form.html
+++ b/form.html
@@ -112,11 +112,39 @@
                                 <label for="validationCustomUsername" class="form-label">Correo electronico</label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                    <input type="text" class="form-control" id="validationCustomUsername"
+                                    <input type="email" class="form-control" id="validationCustomUsername"
                                         aria-describedby="inputGroupPrepend" placeholder="josueaguilar@example.com" required>
                                     <div class="invalid-feedback">
                                         Please choose a email.
                                     </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="validationCustom03" class="form-label">Edad</label>
+                                <input type="number" class="form-control" id="validationCustom03" min="5" max="100" required>
+                                <div class="invalid-feedback">
+                                    Please provide a valid RFC.
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="validationCustom03" class="form-label">CURP</label>
+                                <input type="text" class="form-control" id="validationCustom03" required>
+                                <div class="invalid-feedback">
+                                    Please provide a valid RFC.
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="validationCustom03" class="form-label">Teléfono</label>
+                                <input type="text" class="form-control" id="validationCustom03" required>
+                                <div class="invalid-feedback">
+                                    Please provide a valid RFC.
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="validationCustom03" class="form-label">Código Postal</label>
+                                <input type="number" class="form-control" id="validationCustom03" required>
+                                <div class="invalid-feedback">
+                                    Please provide a valid RFC.
                                 </div>
                             </div>
                             <div class="col-md-6">
