--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <a href="#contact" class="nav-link">Contacto</a>
               </li>
               <li class="nav-item">
-                <a href="form.php" class="nav-link">Registro</a>
+                <a href="form.html" class="nav-link">Registro</a>
               </li>
             </ul>
             <form class="d-flex">
